--- a/gallery.html
+++ b/gallery.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ギャラリー - FF14</title>
+    <title>暁月の終焉 - FF14</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* インラインCSS: ナビとフッターの固定スタイル */
         nav {
             position: fixed;
             top: 0;
@@ -20,14 +21,13 @@
             color: white;
             margin: 0 15px;
             text-decoration: none;
-            transition: all 0.3s ease; /* 滑らかな変化のためのトランジション */
+            transition: all 0.3s ease;
         }
-        /* ホバーエフェクトの追加 */
         nav a:hover {
-            color: #ffd700; /* カーソルオンで色を変更（例: ゴールド） */
-            background-color: rgba(255, 255, 255, 0.1); /* 薄い背景色 */
-            padding: 5px 10px; /* 少し余白を追加 */
-            border-radius: 5px; /* 角を丸く */
+            color: #ffd700;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 5px 10px;
+            border-radius: 5px;
         }
         footer {
             position: fixed;
@@ -40,26 +40,12 @@
             padding: 10px 0;
             z-index: 1000;
         }
-        .music-player {
-            position: fixed;
-            top: 50px;
-            left: 10px;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            border-radius: 5px;
-            z-index: 1000;
-            color: white;
-        }
-        body {
-            margin-top: 120px;
-            margin-bottom: 40px;
-            margin-left: 10px;
-        }
     </style>
 </head>
-<body class="bg-gallery">
+<body class="bg-ew">
+    <!-- 音楽プレイヤー -->
     <div class="music-player">
-        <audio id="bgm" loop>
+        <audio id="bgm">
             <source src="" type="audio/mpeg">
             お使いのブラウザは音楽に対応していません。
         </audio>
@@ -70,6 +56,8 @@
         <button class="nav-btn" onclick="nextTrack()">></button>
         <p>再生中: <span id="current-track"></span></p>
     </div>
+
+    <!-- ナビゲーション -->
     <nav>
         <a href="index.html">ホーム</a>
         <a href="profile-nebelfee.html">Nebelfee</a>
@@ -78,77 +66,87 @@
         <a href="gallery.html">ギャラリー</a>
         <a href="raid.html">レイド</a>
     </nav>
-    <h1>冒険の記録</h1>
-    <div class="slideshow">
-        <img src="assets/ss1.jpg" alt="SS1" class="slide" onmouseover="selectSlide(0)">
-        <img src="assets/ss2.jpg" alt="SS2" class="slide" onmouseover="selectSlide(1)">
-        <img src="assets/ss3.jpg" alt="SS3" class="slide" onmouseover="selectSlide(2)">
-        <img src="assets/ss4.jpg" alt="SS4" class="slide" onmouseover="selectSlide(3)">
-        <img src="assets/ss5.jpg" alt="SS5" class="slide" onmouseover="selectSlide(4)">
-        <img src="assets/ss6.jpg" alt="SS6" class="slide" onmouseover="selectSlide(5)">
-        <img src="assets/ss7.jpg" alt="SS7" class="slide" onmouseover="selectSlide(6)">
-        <img src="assets/ss8.jpg" alt="SS8" class="slide" onmouseover="selectSlide(7)">
-        <img src="assets/ss9.jpg" alt="SS9" class="slide" onmouseover="selectSlide(8)">
-        <img src="assets/ss10.jpg" alt="SS10" class="slide" onmouseover="selectSlide(9)">
-    </div>
-    <div class="gallery">
-        <div class="gallery-item">
-            <img src="assets/ss1.jpg" alt="いたずら">
-            <p>秘密のウィンク！</p>
+
+    <!-- メインコンテンツ -->
+    <div class="content-wrapper">
+        <!-- スライドショー -->
+        <div class="slideshow">
+            <img src="assets/ss1.jpg" alt="SS1" class="slide">
+            <img src="assets/ss2.jpg" alt="SS2" class="slide">
+            <img src="assets/ss3.jpg" alt="SS3" class="slide">
+            <img src="assets/ss4.jpg" alt="SS4" class="slide">
+            <img src="assets/ss5.jpg" alt="SS5" class="slide">
+            <img src="assets/ss6.jpg" alt="SS6" class="slide">
+            <img src="assets/ss7.jpg" alt="SS7" class="slide">
+            <img src="assets/ss8.jpg" alt="SS8" class="slide">
+            <img src="assets/ss9.jpg" alt="SS9" class="slide">
+            <img src="assets/ss10.jpg" alt="SS10" class="slide">
         </div>
-        <div class="gallery-item">
-            <img src="assets/ss2.jpg" alt="穏やか">
-            <p>静かな勇気</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss3.jpg" alt="弾む">
-            <p>無重力の喜び！</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss4.jpg" alt="決意">
-            <p>闇の戦士</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss5.jpg" alt="信頼">
-            <p>静かな絆</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss6.jpg" alt="発見">
-            <p>好奇心の輝き！</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss7.jpg" alt="穏和">
-            <p>音楽の共鳴</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss8.jpg" alt="自由">
-            <p>リズムに載せて！</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss9.jpg" alt="楽しい">
-            <p>スイーツの魔法！</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss10.jpg" alt="リラックス">
-            <p>穏やかな夢</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss11.jpg" alt="自信">
-            <p>未来の戦士</p>
-        </div>
-        <div class="gallery-item">
-            <img src="assets/ss12.jpg" alt="希望">
-            <p>星空の約束</p>
+
+        <h1>冒険の記録</h1>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="assets/ss1.jpg" alt="いたずら">
+                <p>秘密のウィンク！</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss2.jpg" alt="穏やか">
+                <p>静かな勇気</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss3.jpg" alt="弾む">
+                <p>無重力の喜び！</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss4.jpg" alt="決意">
+                <p>闇の戦士</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss5.jpg" alt="信頼">
+                <p>静かな絆</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss6.jpg" alt="発見">
+                <p>好奇心の輝き！</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss7.jpg" alt="穏和">
+                <p>音楽の共鳴</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss8.jpg" alt="自由">
+                <p>リズムに載せて！</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss9.jpg" alt="楽しい">
+                <p>スイーツの魔法！</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss10.jpg" alt="リラックス">
+                <p>穏やかな夢</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss11.jpg" alt="自信">
+                <p>未来の戦士</p>
+            </div>
+            <div class="gallery-item">
+                <img src="assets/ss12.jpg" alt="希望">
+                <p>星空の約束</p>
+            </div>
         </div>
     </div>
 
+    <!-- フッター -->
     <footer>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
 
+    <!-- 外部スクリプト -->
     <script src="script.js"></script>
+    <!-- インラインスクリプト -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+            // BGM制御
             const tracks = [
                 { src: "assets/White Stone Black ～万魔殿パンデモニウム：煉獄編～.mp3", "name": "White Stone Black" },
                 { src: "assets/Flow.mp3", "name": "Flow" },
@@ -156,7 +154,7 @@
             ];
             const bgm = document.getElementById("bgm");
             const currentTrack = document.getElementById("current-track");
-            let currentIndex = 0;
+            let currentIndex = Math.floor(Math.random() * tracks.length);
 
             function updateTrack() {
                 bgm.src = tracks[currentIndex].src;
@@ -165,8 +163,12 @@
                 bgm.play().catch(error => console.log("再生エラー:", error));
             }
 
-            currentIndex = Math.floor(Math.random() * tracks.length);
             updateTrack();
+
+            bgm.addEventListener('ended', () => {
+                currentIndex = (currentIndex + 1) % tracks.length;
+                updateTrack();
+            });
 
             window.prevTrack = function() {
                 currentIndex = (currentIndex - 1 + tracks.length) % tracks.length;
@@ -178,25 +180,37 @@
                 updateTrack();
             };
 
-            // スライドショー
-            let slideIndex = 0;
-            const slides = document.querySelectorAll(".slide");
-            function showSlides() {
-                slides.forEach(slide => slide.style.display = "none");
-                slideIndex = (slideIndex + 1) % slides.length;
-                slides[slideIndex].style.display = "block";
-                slideshowTimeout = setTimeout(showSlides, 3000);
-            }
-            let slideshowTimeout = setTimeout(showSlides, 3000);
-            slides[0].style.display = "block";
-
-            window.selectSlide = function(index) {
-                clearTimeout(slideshowTimeout);
-                slides.forEach(slide => slide.style.display = "none");
-                slideIndex = index;
-                slides[slideIndex].style.display = "block";
-                slideshowTimeout = setTimeout(showSlides, 3000);
+            window.startBGM = function() {
+                bgm.play().catch(error => console.log("再生エラー:", error));
             };
+
+            window.toggleBGM = function() {
+                if (bgm.paused) {
+                    bgm.play().catch(error => console.log("再生エラー:", error));
+                } else {
+                    bgm.pause();
+                }
+            };
+
+            window.adjustVolume = function() {
+                bgm.volume = document.getElementById("volume").value;
+            };
+
+            // スライドショー制御（自動切り替え）
+            const slides = document.querySelectorAll('.slide');
+            let slideIndex = 0;
+
+            function showNextSlide() {
+                slides.forEach((slide, i) => {
+                    slide.style.opacity = i === slideIndex ? 1 : 0;
+                });
+                slideIndex = (slideIndex + 1) % slides.length;
+            }
+
+            // 初期表示
+            slides[0].style.opacity = 1; // 最初のスライドを表示
+            // 3秒ごとに自動切り替え
+            setInterval(showNextSlide, 3000);
         });
     </script>
 </body>
