--- a/story-stormblood.html
+++ b/story-stormblood.html
@@ -20,14 +20,13 @@
             color: white;
             margin: 0 15px;
             text-decoration: none;
-            transition: all 0.3s ease; /* 滑らかな変化のためのトランジション */
+            transition: all 0.3s ease;
         }
-        /* ホバーエフェクトの追加 */
         nav a:hover {
-            color: #ffd700; /* カーソルオンで色を変更（例: ゴールド） */
-            background-color: rgba(255, 255, 255, 0.1); /* 薄い背景色 */
-            padding: 5px 10px; /* 少し余白を追加 */
-            border-radius: 5px; /* 角を丸く */
+            color: #ffd700;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 5px 10px;
+            border-radius: 5px;
         }
         footer {
             position: fixed;
@@ -40,26 +39,16 @@
             padding: 10px 0;
             z-index: 1000;
         }
-        .music-player {
-            position: fixed;
-            top: 50px;
-            left: 10px;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            border-radius: 5px;
-            z-index: 1000;
-            color: white;
-        }
         body {
             margin-top: 120px;
-            margin-bottom: 40px;
+            margin-bottom: 80px;
             margin-left: 10px;
         }
     </style>
 </head>
 <body class="bg-sb">
     <div class="music-player">
-        <audio id="bgm" loop>
+        <audio id="bgm">
             <source src="" type="audio/mpeg">
             お使いのブラウザは音楽に対応していません。
         </audio>
@@ -193,7 +182,6 @@
         <a href="story-heavensward.html">前章: 蒼天のイシュガルド</a>
         <a href="story-shadowbringers.html">次章: 漆黒のヴィランズ</a>
     </div>
-
     <footer>
         <div class="footer-nav">
             <a href="story-heavensward.html">前章: 蒼天のイシュガルド</a>
@@ -201,40 +189,63 @@
         </div>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
-    
     <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
-                {"src": "assets/Revolutions.mp3", "name": "Revolutions"},
-                {"src": "assets/エスケープ ～次元の狭間オメガアルファ編～.mp3", "name": "エスケープ"},
-                {"src": "assets/バトル2 ～次元の狭間オメガデルタ編～.mp3", "name": "バトル2"},
-                {"src": "assets/千年の暁 ～朱雀征魂戦～.mp3", "name": "千年の暁"},
-                {"src": "assets/天つ風 ～白虎征魂戦～.mp3", "name": "天つ風"},
-                {"src": "assets/月下彼岸花 ～蛮神ツクヨミ討滅戦～.mp3", "name": "月華彼岸花"},
-                {"src": "assets/紅の夜明け ～クガネ昼～.mp3", "name": "紅の夜明け"},
-                {"src": "assets/血の嵐.mp3", "name": "血の嵐"},
-                {"src": "assets/鬨の声.mp3", "name": "鬨の声"},
-                {"src": "assets/龍の尾 ～神龍討滅戦～.mp3", "name": "龍の尾"}
+                { src: "assets/Revolutions.mp3", name: "Revolutions" },
+                { src: "assets/エスケープ ～次元の狭間オメガアルファ編～.mp3", name: "エスケープ" },
+                { src: "assets/バトル2 ～次元の狭間オメガデルタ編～.mp3", name: "バトル2" },
+                { src: "assets/千年の暁 ～朱雀征魂戦～.mp3", name: "千年の暁" },
+                { src: "assets/天つ風 ～白虎征魂戦～.mp3", name: "天つ風" },
+                { src: "assets/月下彼岸花 ～蛮神ツクヨミ討滅戦～.mp3", name: "月華彼岸花" },
+                { src: "assets/紅の夜明け ～クガネ昼～.mp3", name: "紅の夜明け" },
+                { src: "assets/血の嵐.mp3", name: "血の嵐" },
+                { src: "assets/鬨の声.mp3", name: "鬨の声" },
+                { src: "assets/龍の尾 ～神龍討滅戦～.mp3", name: "龍の尾" }
             ];
             const bgm = document.getElementById("bgm");
             const currentTrack = document.getElementById("current-track");
-            let currentIndex = 0;
+            let currentIndex = Math.floor(Math.random() * tracks.length);
+
             function updateTrack() {
                 bgm.src = tracks[currentIndex].src;
                 currentTrack.textContent = tracks[currentIndex].name;
                 bgm.load();
                 bgm.play().catch(error => console.log("再生エラー:", error));
             }
-            currentIndex = Math.floor(Math.random() * tracks.length);
+
             updateTrack();
+
+            bgm.addEventListener('ended', () => {
+                currentIndex = (currentIndex + 1) % tracks.length;
+                updateTrack();
+            });
+
             window.prevTrack = function() {
                 currentIndex = (currentIndex - 1 + tracks.length) % tracks.length;
                 updateTrack();
             };
+
             window.nextTrack = function() {
                 currentIndex = (currentIndex + 1) % tracks.length;
                 updateTrack();
+            };
+
+            window.startBGM = function() {
+                bgm.play().catch(error => console.log("再生エラー:", error));
+            };
+
+            window.toggleBGM = function() {
+                if (bgm.paused) {
+                    bgm.play().catch(error => console.log("再生エラー:", error));
+                } else {
+                    bgm.pause();
+                }
+            };
+
+            window.adjustVolume = function() {
+                bgm.volume = document.getElementById("volume").value;
             };
         });
     </script>
