--- a/story-a-realm-reborn.html
+++ b/story-a-realm-reborn.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>新生エオルゼア - FF14</title>
     <link rel="stylesheet" href="styles.css">
-     <style>
+    <style>
         nav {
             position: fixed;
             top: 0;
@@ -20,14 +20,13 @@
             color: white;
             margin: 0 15px;
             text-decoration: none;
-            transition: all 0.3s ease; /* 滑らかな変化のためのトランジション */
+            transition: all 0.3s ease;
         }
-        /* ホバーエフェクトの追加 */
         nav a:hover {
-            color: #ffd700; /* カーソルオンで色を変更（例: ゴールド） */
-            background-color: rgba(255, 255, 255, 0.1); /* 薄い背景色 */
-            padding: 5px 10px; /* 少し余白を追加 */
-            border-radius: 5px; /* 角を丸く */
+            color: #ffd700;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 5px 10px;
+            border-radius: 5px;
         }
         footer {
             position: fixed;
@@ -40,26 +39,16 @@
             padding: 10px 0;
             z-index: 1000;
         }
-        .music-player {
-            position: fixed;
-            top: 50px;
-            left: 10px;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            border-radius: 5px;
-            z-index: 1000;
-            color: white;
-        }
         body {
             margin-top: 120px;
-            margin-bottom: 40px;
+            margin-bottom: 80px;
             margin-left: 10px;
         }
     </style>
 </head>
 <body class="bg-arr">
     <div class="music-player">
-        <audio id="bgm" loop>
+        <audio id="bgm">
             <source src="" type="audio/mpeg">
             お使いのブラウザは音楽に対応していません。
         </audio>
@@ -195,7 +184,6 @@
         <a href="story-origin.html">前章: 第零章</a>
         <a href="story-heavensward.html">次章: 蒼天のイシュガルド</a>
     </div>
-
     <footer>
         <div class="footer-nav">
             <a href="story-origin.html">前章: 第零章</a>
@@ -203,40 +191,63 @@
         </div>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
-    
     <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
-                {"src": "assets/Answers.mp3", "name": "Answers"},
-                {"src": "assets/ビッグブリッヂの死闘 ～新生～.mp3", "name": "ビッグブリッヂの死闘 ～新生～"},
-                {"src": "assets/不吉なる前兆.mp3", "name": "不吉なる前兆"},
-                {"src": "assets/原始の審判.mp3", "name": "原始の審判"},
-                {"src": "assets/堕天せし者.mp3", "name": "堕天せし者"},
-                {"src": "assets/天より降りし力.mp3", "name": "天より降りし力"},
-                {"src": "assets/灰より生まれし者.mp3", "name": "灰より生まれし者"},
-                {"src": "assets/究極幻想.mp3", "name": "究極幻想"},
-                {"src": "assets/過重圧殺! ～蛮神タイタン討滅戦～.mp3", "name": "過重圧殺!"},
-                {"src": "assets/雷光雷鳴 ～蛮神ラムウ討滅戦～.mp3", "name": "雷光雷鳴"}
+                { src: "assets/Answers.mp3", name: "Answers" },
+                { src: "assets/ビッグブリッヂの死闘 ～新生～.mp3", name: "ビッグブリッヂの死闘 ～新生～" },
+                { src: "assets/不吉なる前兆.mp3", name: "不吉なる前兆" },
+                { src: "assets/原始の審判.mp3", name: "原始の審判" },
+                { src: "assets/堕天せし者.mp3", name: "堕天せし者" },
+                { src: "assets/天より降りし力.mp3", name: "天より降りし力" },
+                { src: "assets/灰より生まれし者.mp3", name: "灰より生まれし者" },
+                { src: "assets/究極幻想.mp3", name: "究極幻想" },
+                { src: "assets/過重圧殺! ～蛮神タイタン討滅戦～.mp3", name: "過重圧殺!" },
+                { src: "assets/雷光雷鳴 ～蛮神ラムウ討滅戦～.mp3", name: "雷光雷鳴" }
             ];
             const bgm = document.getElementById("bgm");
             const currentTrack = document.getElementById("current-track");
-            let currentIndex = 0;
+            let currentIndex = Math.floor(Math.random() * tracks.length);
+
             function updateTrack() {
                 bgm.src = tracks[currentIndex].src;
                 currentTrack.textContent = tracks[currentIndex].name;
                 bgm.load();
                 bgm.play().catch(error => console.log("再生エラー:", error));
             }
-            currentIndex = Math.floor(Math.random() * tracks.length);
+
             updateTrack();
+
+            bgm.addEventListener('ended', () => {
+                currentIndex = (currentIndex + 1) % tracks.length;
+                updateTrack();
+            });
+
             window.prevTrack = function() {
                 currentIndex = (currentIndex - 1 + tracks.length) % tracks.length;
                 updateTrack();
             };
+
             window.nextTrack = function() {
                 currentIndex = (currentIndex + 1) % tracks.length;
                 updateTrack();
+            };
+
+            window.startBGM = function() {
+                bgm.play().catch(error => console.log("再生エラー:", error));
+            };
+
+            window.toggleBGM = function() {
+                if (bgm.paused) {
+                    bgm.play().catch(error => console.log("再生エラー:", error));
+                } else {
+                    bgm.pause();
+                }
+            };
+
+            window.adjustVolume = function() {
+                bgm.volume = document.getElementById("volume").value;
             };
         });
     </script>
