--- a/story-endwalker.html
+++ b/story-endwalker.html
@@ -20,14 +20,13 @@
             color: white;
             margin: 0 15px;
             text-decoration: none;
-            transition: all 0.3s ease; /* 滑らかな変化のためのトランジション */
+            transition: all 0.3s ease;
         }
-        /* ホバーエフェクトの追加 */
         nav a:hover {
-            color: #ffd700; /* カーソルオンで色を変更（例: ゴールド） */
-            background-color: rgba(255, 255, 255, 0.1); /* 薄い背景色 */
-            padding: 5px 10px; /* 少し余白を追加 */
-            border-radius: 5px; /* 角を丸く */
+            color: #ffd700;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 5px 10px;
+            border-radius: 5px;
         }
         footer {
             position: fixed;
@@ -40,26 +39,16 @@
             padding: 10px 0;
             z-index: 1000;
         }
-        .music-player {
-            position: fixed;
-            top: 50px;
-            left: 10px;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            border-radius: 5px;
-            z-index: 1000;
-            color: white;
-        }
         body {
             margin-top: 120px;
-            margin-bottom: 40px;
+            margin-bottom: 80px;
             margin-left: 10px;
         }
     </style>
 </head>
 <body class="bg-ew">
     <div class="music-player">
-        <audio id="bgm" loop>
+        <audio id="bgm">
             <source src="" type="audio/mpeg">
             お使いのブラウザは音楽に対応していません。
         </audio>
@@ -189,11 +178,10 @@
         <p>ある朝、姉弟は森の奥で休息した。Nebelfeeは霧を見上げ、母ミスティアの笑顔を思い出した。Schattenfeeは影に触れ、父カゲロウの教えを感じた。霧と影が彼らを導き、エオルゼアの未来を照らした。姉弟の物語は続き、新たな試練が待っていた。</p>
         <p>暁月の旅路がエオルゼアに希望をもたらした。霧と影が彼らを守り、新たな未来を開いた。運命の旅路はまだ続いていた。</p>
     </div>
-    <div class="story-nav">
+     <div class="story-nav">
         <a href="story-shadowbringers.html">前章: 漆黒のヴィランズ</a>
         <a href="story-dawntrail.html">次章: 黄金のレガシー</a>
     </div>
-
     <footer>
         <div class="footer-nav">
             <a href="story-shadowbringers.html">前章: 漆黒のヴィランズ</a>
@@ -201,40 +189,63 @@
         </div>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
     </footer>
-    
     <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
-                {"src": "assets/Close in the Distance.mp3", "name": "Close in the Distance"},
-                {"src": "assets/Endwalker.mp3", "name": "Endwalker"},
-                {"src": "assets/Flow.mp3", "name": "Flow"},
-                {"src": "assets/Answers.mp3", "name": "Answers"},
-                {"src": "assets/白銀の悪魔 ～女神ソフィア討滅戦～.mp3", "name": "白銀の悪魔"},
-                {"src": "assets/神の愛を讃える地 ～雪と氷の試練～.mp3", "name": "神の愛を讃える地"},
-                {"src": "assets/終焉の戦い.mp3", "name": "終焉の戦い"},
-                {"src": "assets/終極の戦い.mp3", "name": "終極の戦い"},
-                {"src": "assets/英霊のエギ ～ゾディアーク討滅戦～.mp3", "name": "英霊のエギ"},
-                {"src": "assets/希望の園エデン.mp3", "name": "希望の園エデン"}
+                { src: "assets/Close in the Distance.mp3", name: "Close in the Distance" },
+                { src: "assets/Endwalker.mp3", name: "Endwalker" },
+                { src: "assets/Flow.mp3", name: "Flow" },
+                { src: "assets/Answers.mp3", name: "Answers" },
+                { src: "assets/白銀の悪魔 ～女神ソフィア討滅戦～.mp3", name: "白銀の悪魔" },
+                { src: "assets/神の愛を讃える地 ～雪と氷の試練～.mp3", name: "神の愛を讃える地" },
+                { src: "assets/終焉の戦い.mp3", name: "終焉の戦い" },
+                { src: "assets/終極の戦い.mp3", name: "終極の戦い" },
+                { src: "assets/英霊のエギ ～ゾディアーク討滅戦～.mp3", name: "英霊のエギ" },
+                { src: "assets/希望の園エデン.mp3", name: "希望の園エデン" }
             ];
             const bgm = document.getElementById("bgm");
             const currentTrack = document.getElementById("current-track");
-            let currentIndex = 0;
+            let currentIndex = Math.floor(Math.random() * tracks.length);
+
             function updateTrack() {
                 bgm.src = tracks[currentIndex].src;
                 currentTrack.textContent = tracks[currentIndex].name;
                 bgm.load();
                 bgm.play().catch(error => console.log("再生エラー:", error));
             }
-            currentIndex = Math.floor(Math.random() * tracks.length);
+
             updateTrack();
+
+            bgm.addEventListener('ended', () => {
+                currentIndex = (currentIndex + 1) % tracks.length;
+                updateTrack();
+            });
+
             window.prevTrack = function() {
                 currentIndex = (currentIndex - 1 + tracks.length) % tracks.length;
                 updateTrack();
             };
+
             window.nextTrack = function() {
                 currentIndex = (currentIndex + 1) % tracks.length;
                 updateTrack();
+            };
+
+            window.startBGM = function() {
+                bgm.play().catch(error => console.log("再生エラー:", error));
+            };
+
+            window.toggleBGM = function() {
+                if (bgm.paused) {
+                    bgm.play().catch(error => console.log("再生エラー:", error));
+                } else {
+                    bgm.pause();
+                }
+            };
+
+            window.adjustVolume = function() {
+                bgm.volume = document.getElementById("volume").value;
             };
         });
     </script>
